# contextforge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  historical_patches.jsonl  sample_tasks.jsonl
benchmarks/results/: historical_patches.json  preliminary.json  self_performance.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DECISIONS.md  DEMO.md  EVALUATION.md  GRAPH.md  MCP.md  PLAN.md  RELEASE_NOTES.md  SECURITY.md
src/contextforge/: __init__.py  cli.py  config.py  engine.py  models.py  skill_install.py
src/contextforge/bundled_skills/: __init__.py
src/contextforge/bundled_skills/contextforge-graph/: SKILL.md
src/contextforge/bundled_skills/contextforge-graph/agents/: openai.yaml
src/contextforge/codegraph/: __init__.py  analyze.py  build.py  cluster.py  detect.py  export.py  extract.py  models.py  pipeline.py  query.py  report.py  validate.py
src/contextforge/context/: __init__.py  package.py
src/contextforge/dashboard/: __init__.py  app.py
src/contextforge/dashboard/static/: __init__.py  dashboard.js  index.html  styles.css
src/contextforge/embeddings/: __init__.py  base.py  local.py
src/contextforge/evaluation/: __init__.py  harness.py  historical.py  metrics.py  models.py
src/contextforge/graph/: __init__.py  builder.py  models.py  query.py
src/contextforge/indexing/: __init__.py  indexer.py  traversal.py
src/contextforge/mcp/: __init__.py  server.py
src/contextforge/observability/: __init__.py  logging.py
src/contextforge/optimization/: __init__.py  selector.py  tokens.py
src/contextforge/parsers/: __init__.py  base.py  python.py
src/contextforge/reranking/: __init__.py  base.py  weighted.py
src/contextforge/retrieval/: __init__.py  evolution.py  history.py  lexical.py  models.py  semantic.py  structural.py  symbols.py  tests.py  text.py
src/contextforge/routing/: __init__.py  router.py
src/contextforge/storage/: __init__.py  database.py
tests/: test_cli.py  test_codegraph.py  test_config.py  test_dashboard.py  test_engine.py  test_evaluation.py  test_graph.py  test_historical_benchmark.py  test_history.py  test_indexer.py  test_mcp.py  test_package.py  test_python_parser.py  test_retrieval.py  test_routing_reranking.py  test_semantic.py  test_structural_retrieval.py  test_traversal.py
tests/fixtures/multilang_repo/: .gitignore
tests/fixtures/multilang_repo/services/: paths.py  router.py
tests/fixtures/multilang_repo/web/: client.ts
tests/fixtures/multilang_repo/worker/: main.go
tests/fixtures/sample_repo/: .gitignore
tests/fixtures/sample_repo/app/: __init__.py  routing.py  utils.py
tests/fixtures/sample_repo/tests/: test_routing.py
