[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "contextforge"
version = "0.1.0"
description = "Adaptive repository-context compiler for autonomous coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aaryan Rustagi" }]
keywords = ["ai-agents", "code-retrieval", "context-engineering", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.116,<1",
  "mcp>=1.10,<2",
  "pathspec>=0.12,<1",
  "pydantic>=2.11,<3",
  "rich>=14,<15",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pre-commit>=4.2,<5",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
contextforge = "contextforge.cli:app"

[project.urls]
Homepage = "https://github.com/rustagiaaryan/contextforge"
Repository = "https://github.com/rustagiaaryan/contextforge"
Issues = "https://github.com/rustagiaaryan/contextforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
norecursedirs = ["tests/fixtures"]
filterwarnings = [
  "ignore:Using .*httpx.*starlette.testclient.*:Warning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["contextforge"]
